--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "test": "test"
   },
   "dependencies": {
-    "jquery": "~1.8.2"
+    "grunt": "^0.4.5",
+    "jquery": "~1.8.2",
+    "karma": "^0.10.10"
   },
   "devDependencies": {
     "karma-coverage": "~0.1.3",
